--- a/Pierwszy_GIT/public_html/index.html
+++ b/Pierwszy_GIT/public_html/index.html
@@ -13,5 +13,6 @@ and open the template in the editor.
     <body>
         <div></div>
         <h1>Dziś rządzą Janusze i Grażyny htmla</h1>
+        <h2>Zmiana kodu</h2>
     </body>
 </html>
